--- a/style.css
+++ b/style.css
@@ -85,6 +85,7 @@ header .logo{
     -moz-box-shadow: 0 1px 3px rgba(0,0,0,0.5);
     box-shadow: 0 1px 3px rgba(0,0,0,0.5);
 }
+
 .login input{
     box-sizing: border-box;
     padding: 3px;
@@ -95,6 +96,10 @@ header .logo{
 }
 input:last-of-type{
     margin-top:10px;
+}
+
+.login .view {
+    margin-top: 42px;
 }
 .login input[type="checkbox"]{
     width:15px;
