--- a/style.css
+++ b/style.css
@@ -38,13 +38,13 @@ header .basket:hover, .authorization:hover{
     color: blueviolet;
 }
 header .basket-img:before{
-    background-image: url('img/shopping-cart.gif');
+    background-image: url('img/Symbol/shopping-cart.gif');
 }
 header .basket-img, .authorization-img {
     padding-left:5px;
 }
 header .authorization-img:before{
-    background-image: url('img/logo-login.png');
+    background-image: url('img/Symbol/logo-login.png');
 }
 header .basket-img:before, .authorization-img:before{
     content: "";
