--- a/style.css
+++ b/style.css
@@ -8,9 +8,8 @@ b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, c
 	vertical-align: baseline;
 }
 body{
-    font-size: 20px;
+    font-size: 16px;
 }
-
 /*Header*/
 header .logo{
     float:left;
@@ -66,7 +65,6 @@ header .basket-img:before, .authorization-img:before{
     background-repeat: no-repeat;
     background-position: center;
 }
-
 .tab-content .imgCPU:before{
     background-image: url('img/CPU/Intel/Intel%20Pentium%20G2020%20OEM.jpg');
 }
@@ -92,14 +90,12 @@ header .basket-img:before, .authorization-img:before{
 .tab-content-layout, .productLayout{
     width: 90%;
     margin: 0 auto;
-    
 }
 .tab-content .layoutCategories{
     display: inline-block;
     list-style: none;
     vertical-align: top;
 }
-
 .tab-content .Categories{
     box-sizing: border-box;
     display: inline-block;
@@ -124,7 +120,6 @@ header, section, footer{
 section{
     min-height: 200px;
 }
-
 .Categories:hover{
     border:none;
     font-size: 25px;
@@ -210,16 +205,63 @@ input:last-of-type{
     color: orange;
 }
 /*Product description*/
-
+.productDescription{
+    padding-top: 10px;
+    box-sizing: border-box;
+    width:70%;
+    margin: 0 auto;
+}
+.productDescription:after{
+    display: block;
+    clear: both;
+    content: '';
+}
 .productDescription .breadcrumb, .breadcrumb>li{
     display: inline-block;
     list-style-type: none;
     font-size: 13px;
 }
+.slider-img {
+    float: left;
+    width:31%;
+    height: 25%;
+}
 .slider-img .bigImg{
-    width:150px;
-    height: 150px;
+    margin-top:10px;
+    width:70%;
+    min-height: 200px;
     background-image: url('img/CPU/Intel/Intel%20Celeron%20G1620%20OEM.jpg');
     background-size: contain;
     background-repeat: no-repeat;
+    background-position: right -38px bottom 0px;
 }
+.slider-img .minImg img{
+    width: 15%;
+    min-height: 40px;
+}
+.layoutDescription{
+    margin-top:50px;
+    float: right;
+    width: 50%;
+}
+.description{
+    padding-top:10px;
+    width:80%;
+}
+.imgStar{
+    margin-left: 50px;
+    display: inline-block;
+    background: url('img/Symbol/rating.png')repeat-x;
+    width:80px;
+    height: 14px;
+}
+.raiting{
+
+    display: inline-block;
+    background: url('img/Symbol/rating-fill.png')repeat-x;
+    width: 72px;
+    height: 14px;
+}
+
+
+
