--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ header .logo{
     float:left;
     background: url('img/');
 }
-.logo, .search, .basket, .authorization, .imgStar, .description h1, .addCart {
+.logo, .search, .basket, .authorization, .imgStar, .layoutDescription h1, .addCart {
     display: inline-block;
     box-sizing: border-box;
 }
@@ -134,7 +134,7 @@ footer {
 }
 
 section{
-    min-height: 200px;
+    min-height: 500px;
 }
 .Categories:hover{
     border:none;
@@ -204,23 +204,34 @@ input[placeholder="Search"]{
 /*Menu*/
 menu {      
     box-sizing: border-box;
-    width: 12%;
-    padding: 10px 5px;    
-    border: 1px solid black;
+    width: 10%;
+    border: 5px solid rebeccapurple;
     border-left: none;
-    border-top: none;
+    border-top-right-radius: 15px;
+    border-bottom-right-radius: 15px;
 }
 
-.navbar {       
-    list-style-type: none;    
+.navbar {
+    z-index: 1;
+    margin-top: 20px;
+    list-style-type: none;
+    position: fixed;
 }
 
+/*
 .navbar li {   
-    padding-top: 4px;
-    padding-bottom: 4px;
+    border-bottom: 1px solid black;
+    padding: 15px;
 }
+*/
 
-.navbar a {    
+.navbar a {
+    z-index: 100;
+    box-sizing: border-box;
+    width: 100%;
+    display: inline-block;
+    border-bottom: 1px solid rebeccapurple;
+    padding: 15px;
     text-decoration: none;
     padding-left: 5px;
 }
@@ -286,7 +297,7 @@ menu .menucooling-img {
     width:80%;
     margin: 0 auto;
 }
-.productDescription:after{
+.productDescription:after, description:after{
     display: block;
     clear: both;
     content: '';
@@ -359,13 +370,9 @@ menu .menucooling-img {
     border-right: 0;
 }
 .layoutDescription{
-    margin-top:10px;
-    float: right;
+    margin-top: 10px;
+    float: left;
     width: 60%;
-}
-.description{
-    padding-top:10px;
-    width:80%;
 }
 .imgStar{
     background: url('img/Symbol/rating.png')repeat-x;
@@ -389,7 +396,7 @@ menu .menucooling-img {
     margin-bottom: 20px;
 
 }
-.description .addCart{
+.addCart{
     margin-top:20px;
     padding: 10px 16px;
     border: 1px solid #70b61f;;
@@ -399,13 +406,38 @@ menu .menucooling-img {
     font-weight: bold;
     font-size: 25px;
 }
+/*Social*/
+.lineSocial{
+    width:100%;
+    clear: both;
+}
+.twitter, .vkontakte, .facebook, .instagram{
+    display: inline-block;
+    background-image: url('img/Symbol/icosocial.png');
+    background-repeat: repeat-x;
+    width: 52px;
+    height: 52px;
+}
+.twitter{
+    background-position: 3%;
+}
+.vkontakte{
+    background-position: 14.6%;
+}
+.facebook{
+    background-position: 26.4%;
+}
+.instagram{
+    background-position: 38.2%;
+}
 
 /*Pages items*/
 
-.itemsContent {    
+.itemsContent { 
+    margin: auto;
     position: relative; 
     padding-bottom: 40px;    
-    width: 87%;
+    width: 75%;
 }
 .viewList {    
     text-align: right;
@@ -414,7 +446,7 @@ menu .menucooling-img {
 }
 
 menu, .itemsContent {
-    display: inline-block;
+/*    display: inline-block;*/
     vertical-align: top;
 }
 
